--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ConstraintLayoutQuestion"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/holo_orange_light"
-    tools:context=".BlankFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".QuestionFragment">
 
     <TextView
         android:id="@+id/Textview_res"
